WHILE loop - Excercise completed
WHILE loop improved from hardcoded at Ingredients count in iteration

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
 			<artifactId>json</artifactId>
 			<version>20190722</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.21</version>
+		</dependency>
 
 
 	</dependencies>
@@ -106,5 +111,4 @@
 			</plugin>
 		</plugins>
 	</reporting>
-
 </project>
