--- a/src/test/resources/automation.properties
+++ b/src/test/resources/automation.properties
@@ -1,6 +1,6 @@
-test.platform=desktop
+test.platform=android
 environment.url=<put initial URL here>
-
+app=/Users/santiago.blanco/Downloads/ApiDemos-debug.apk
 chrome.headless=false
 
 appium.url=http://127.0.0.1:4723/wd/hub
